plugins {
	id "java"
	id "com.github.johnrengelman.shadow"
}

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
	maven { url "https://jitpack.io" }
}

java {
	targetCompatibility = JavaVersion.VERSION_17
	sourceCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"

	options.compilerArgs.addAll([
			"--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
			"--add-exports", "java.base/jdk.internal.module=ALL-UNNAMED",
			"--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED",
			"--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
	])
}

dependencies {
	compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
	compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"

	compileOnly project(":core")
}

jar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}